SET(TARGET_DB ".security-manager.db")

ADD_CUSTOM_COMMAND(
    OUTPUT ${TARGET_DB} ${TARGET_DB}-journal
    COMMAND sqlite3 ${TARGET_DB} <db.sql
    )

# Add a dummy build target to trigger building of ${TARGET_DB}
ADD_CUSTOM_TARGET(DB ALL DEPENDS ${TARGET_DB})

INSTALL(FILES ${TARGET_DB} DESTINATION ${DB_INSTALL_DIR})
INSTALL(FILES ${TARGET_DB}-journal DESTINATION ${DB_INSTALL_DIR})
