
SET(ACE_DAO_DEPS_LIST
    dpl-efl
    dpl-db-efl
    ecore
    appcore-efl
    openssl
    vconf
    db-util
    libpcrecpp
    icu-uc
    libxml-2.0
    )

PKG_CHECK_MODULES(ACE_DAO_DEPS ${ACE_DAO_DEPS_LIST} REQUIRED)

set(ACE_SRC_DIR ${PROJECT_SOURCE_DIR}/ace/dao)

set(ACE_DAO_RO_SOURCES
    ${ACE_SRC_DIR}/AceDAOReadOnly.cpp
    ${ACE_SRC_DIR}/AceDAOUtilities.cpp
    ${ACE_SRC_DIR}/AceDAOConversions.cpp
    ${ACE_SRC_DIR}/BaseAttribute.cpp
    ${ACE_SRC_DIR}/AceDatabase.cpp
    ${ACE_SRC_DIR}/PromptModel.cpp
)

set(ACE_DAO_RW_SOURCES
    ${ACE_SRC_DIR}/AceDAO.cpp
)

INCLUDE_DIRECTORIES(${ACE_SRC_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ace/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ace/orm)
INCLUDE_DIRECTORIES(${ACE_DAO_DEPS_INCLUDE_DIRS})

ADD_LIBRARY(${TARGET_ACE_DAO_RO_LIB} SHARED
    ${ACE_DAO_RO_SOURCES}
)

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RO_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RO_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RO_LIB} PROPERTIES
    COMPILE_FLAGS "-include ${CMAKE_BINARY_DIR}/ace/database_checksum_ace.h")
 
target_link_libraries(${TARGET_ACE_DAO_RO_LIB}
    ${TARGET_DPL_EFL}
    ${TARGET_DPL_DB_EFL}
    ${ACE_DAO_DEPS_LIBRARY}
    ${ACE_DAO_DEPS_LDFLAGS}
)

ADD_LIBRARY(${TARGET_ACE_DAO_RW_LIB} SHARED
    ${ACE_DAO_RW_SOURCES}
)

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RW_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RW_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

SET_TARGET_PROPERTIES(${TARGET_ACE_DAO_RW_LIB} PROPERTIES
    COMPILE_FLAGS "-include ${CMAKE_BINARY_DIR}/ace/database_checksum_ace.h")

target_link_libraries(${TARGET_ACE_DAO_RW_LIB}
    ${ACE_DAO_DEPS_LIST_LIBRARIES}
    ${TARGET_ACE_DAO_RO_LIB}
)

INSTALL(TARGETS ${TARGET_ACE_DAO_RO_LIB}
    DESTINATION lib)

INSTALL(TARGETS ${TARGET_ACE_DAO_RW_LIB}
    DESTINATION lib)

