include(FindPkgConfig)

PKG_CHECK_MODULES(ACE_POPUP_VALIDATION_DEPS
    dpl-efl
    dpl-dbus-efl
    REQUIRED
    )

SET(ACE_POPUP_VALIDATION_DIR
    ${PROJECT_SOURCE_DIR}/ace_popup_validation
    )

SET(ACE_POPUP_VALIDATION_SRC_DIR
    ${ACE_POPUP_VALIDATION_DIR}/src
    )

SET(ACE_POPUP_VALIDATION_INCLUDE_DIR
    ${ACE_POPUP_VALIDATION_DIR}/include
    )

SET(ACE_POPUP_VALIDATION_SOURCES
    ${COMMUNICATION_CLIENT_SOURCES}
    ${ACE_POPUP_VALIDATION_SRC_DIR}/ace_api_popup_validation.cpp    
    )

SET(ACE_POPUP_VALIDATION_INCLUDES
    ${COMMUNICATION_CLIENT_INCLUDES}
    ${ACE_POPUP_VALIDATION_DEPS_INCLUDE_DIRS}
    ${ACE_POPUP_VALIDATION_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/ace_common/include
    ${PROJECT_SOURCE_DIR}/ace/include
    ${PROJECT_SOURCE_DIR}/src/services/ace/dbus/api        
    ${PROJECT_SOURCE_DIR}/src/services/ace
    ${PROJECT_SOURCE_DIR}/src/services/popup/
    ${PROJECT_SOURCE_DIR}/src/daemon/dbus    
    )

ADD_DEFINITIONS(${ACE_POPUP_VALIDATION_DEPS_CFLAGS})
ADD_DEFINITIONS(${ACE_POPUP_VALIDATION_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${ACE_POPUP_VALIDATION_INCLUDES})

ADD_LIBRARY(${TARGET_ACE_POPUP_VALIDATION_LIB} SHARED ${ACE_POPUP_VALIDATION_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ACE_POPUP_VALIDATION_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_ACE_POPUP_VALIDATION_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

TARGET_LINK_LIBRARIES(${TARGET_ACE_POPUP_VALIDATION_LIB}
    ${ACE_POPUP_VALIDATION_DEPS_LIBRARIES} ${ACE_POPUP_VALIDATION_DEPS_LDFLAGS}
    )

INSTALL(TARGETS ${TARGET_ACE_POPUP_VALIDATION_LIB}
    DESTINATION lib)

INSTALL(FILES
    ${ACE_POPUP_VALIDATION_INCLUDE_DIR}/ace_api_popup_validation.h
    DESTINATION include/ace-popup-validation
    )
