include(FindPkgConfig)

PKG_CHECK_MODULES(ACE_SETTINGS_DEPS
    dpl-efl
    REQUIRED
    )

SET(ACE_SETTINGS_DIR
    ${PROJECT_SOURCE_DIR}/ace_settings
    )

SET(ACE_SETTINGS_SRC_DIR
    ${ACE_SETTINGS_DIR}/src
    )

SET(ACE_SETTINGS_INCLUDE_DIR
    ${ACE_SETTINGS_DIR}/include
    )

SET(ACE_SETTINGS_SOURCES
    ${ACE_SETTINGS_SRC_DIR}/ace_api_settings.cpp    
    )

SET(ACE_SETTINGS_INCLUDES
    ${ACE_SETTINGS_DEPS_INCLUDE_DIRS}
    ${ACE_SETTINGS_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/ace_common/include
    ${PROJECT_SOURCE_DIR}/ace/include
    )

ADD_DEFINITIONS(${ACE_SETTINGS_DEPS_CFLAGS})
ADD_DEFINITIONS(${ACE_SETTINGS_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${ACE_SETTINGS_INCLUDES})

ADD_LIBRARY(${TARGET_ACE_SETTINGS_LIB} SHARED ${ACE_SETTINGS_SOURCES})

SET_TARGET_PROPERTIES(${TARGET_ACE_SETTINGS_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${TARGET_ACE_SETTINGS_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

TARGET_LINK_LIBRARIES(${TARGET_ACE_SETTINGS_LIB}
    ${ACE_SETTINGS_DEPS_LIBRARIES}
    ${TARGET_ACE_DAO_RW_LIB}
    )

INSTALL(TARGETS ${TARGET_ACE_SETTINGS_LIB}
    DESTINATION lib)

INSTALL(FILES
    ${ACE_SETTINGS_INCLUDE_DIR}/ace_api_settings.h
    DESTINATION include/ace-settings
    )
