include(FindPkgConfig)

PKG_CHECK_MODULES(COMMUNICATION_CLIENT_DEPS
    dpl-efl
    dpl-dbus-efl
    REQUIRED
    )

SET(COMMUNICATION_CLIENT_DIR
    ${PROJECT_SOURCE_DIR}/communication_client
    )

SET(COMMUNICATION_CLIENT_SRC_DIR
    ${COMMUNICATION_CLIENT_DIR}/src
    )

SET(COMMUNICATION_CLIENT_INCLUDE_DIR
    ${COMMUNICATION_CLIENT_DIR}/include
    )

SET(COMMUNICATION_CLIENT_SOURCES
    ${COMMUNICATION_CLIENT_SRC_DIR}/SecurityCommunicationClient.cpp
    )

SET(COMMUNICATION_CLIENT_INCLUDES
    ${COMMUNICATION_CLIENT_DEPS_INCLUDE_DIRS}
    ${COMMUNICATION_CLIENT_INCLUDE_DIR}
    ${PROJECT_SOURCE_DIR}/src/daemon/dbus
    )

ADD_DEFINITIONS(${COMMUNICATION_CLIENT_DEPS_CFLAGS})
ADD_DEFINITIONS(${COMMUNICATION_CLIENT_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${COMMUNICATION_CLIENT_INCLUDES})

ADD_LIBRARY(${TARGET_COMMUNICATION_CLIENT_LIB} SHARED ${COMMUNICATION_CLIENT_SOURCES})

SET_TARGET_PROPERTIES(${COMMUNICATION_CLIENT_LIB} PROPERTIES
    SOVERSION ${API_VERSION}
    VERSION ${VERSION})

SET_TARGET_PROPERTIES(${COMMUNICATION_CLIENT_LIB} PROPERTIES
    COMPILE_FLAGS -fPIC)

TARGET_LINK_LIBRARIES(${TARGET_COMMUNICATION_CLIENT_LIB}
    ${COMMUNICATION_CLIENT_DEPS_LIBRARIES}
    ${COMMUNICATION_CLIENT_DEPS_LDFLAGS}
    )

INSTALL(TARGETS ${TARGET_COMMUNICATION_CLIENT_LIB}
    DESTINATION lib)

